lod2repository (1.30) lod2; urgency=low

  * add Petar Petrovski keys (Uni Mannheim) (now real)

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Tue, 03 Sep 2013 14:42:20 +0200

lod2repository (1.29) lod2; urgency=low

  * add Petar Petrovski keys (Uni Mannheim)

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Tue, 03 Sep 2013 14:38:31 +0200

lod2repository (1.28) lod2; urgency=low

  * upgrade Sebastian Tramps gnupg key

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Tue, 09 Jul 2013 22:57:23 +0200

lod2repository (1.27) lod2; urgency=low

  * upgrade Claus Stadler gnupg key

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Thu, 04 Jul 2013 17:34:55 +0200

lod2repository (1.26) lod2; urgency=low

  * add Vadim Zaslavski keys (Ontos)

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Wed, 03 Jul 2013 14:51:26 +0200

lod2repository (1.25) lod2; urgency=low

  * add Bernard Buris Keys

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Thu, 23 May 2013 17:03:33 +0200

lod2repository (1.21) lod2; urgency=low

  * add mateja to the list

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Wed, 14 Nov 2012 08:56:03 +0100

lod2repository (1.19) lod2; urgency=low

  * create new packages for testing/stable

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Fri, 22 Jun 2012 22:00:23 +0200

lod2repository (1.18) lod2; urgency=low

  * add new maintainer keys for Szymon Danielczyk (DERI)

 -- Bert Van Nuffelen (TenForce/LOD2) <Bert.Van.Nuffelen@tenforce.com>  Wed, 25 Apr 2012 05:21:13 -0700

lod2repository (1.17) lod2; urgency=low

  * Add new key for maintainer: Claus Stadler (AKSW)

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Thu, 02 Feb 2012 14:41:02 +0100

lod2repository (1.16) lod2; urgency=low

  * re-add Norman Heinos key to the database file

 -- Sebastian Tramp <tramp@informatik.uni-leipzig.de>  Wed, 25 Jan 2012 15:09:57 +0100

lod2repository (1.14) lod2; urgency=low
